# DamnFineToot

./: .gitignore  Cargo.toml  README.md
daemon/: damnfinetoot.service  install.sh  readme.md
src/: main.rs  main_test.rs  texts.rs  texts_test.rs
src/masto/: api_wrapper.rs  mod.rs
src/masto_connect/: mod.rs
src/string_utils/: dft_msg.rs  dft_msg_test.rs  mod.rs  parsing.rs  parsing_test.rs
src/test_res/: noti_favorite.json  noti_perfect.json  noti_reply.json  noti_status.json
