[package]
name = "damnfinetoot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.25.0"
toml = "0.7.2"
futures = "0.3.26"
futures-util = "0.3.26"
regex = "1.7.1"
rand = "0.8.5"
async-trait = "0.1.64"
time = "0.3.19"
serde_json = "1.0.93"
serde = "1.0.152"
chrono = "0.4.23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mastodon-async]
version = "1.1.0"
features = ["toml", "mt"]

